[tool.poetry]
name = "chemrof"
version = "0.0.0"
description = "Chemical Entities, Materials, and Reactions Ontological Framework"
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.7.0"
oaklib = "^0.5.20"
linkml-transformer = "^0.2.2"
linkml = "^1.6.7"
linkml-owl = "^0.3.0"

[tool.poetry.group.dev.dependencies]
linkml-owl = ">=0.2.0"
linkml = ">=1.7.0"
mkdocs = ">=1.2.3"
mkdocs-material = ">=8.1.8"
mkdocs-mermaid2-plugin = ">=0.6.0"
linkml-datalog = ">=0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
