[project]
name = "chemrof"
description = "Chemical Entities, Materials, and Reactions Ontological Framework"
authors = [
    {name = "cmungall", email = "cjm@berkeleybop.org"},
]
license = "CC0-1.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "linkml-runtime>=1.9.0",
    "oaklib>=0.5.20",
    "linkml-transformer>=0.2.2",
    "linkml>=1.6.7",
    "linkml-owl>=0.3.0",
    "duckdb-engine >=0.11.2",
    "toml>=0.10.2",
    "rdkit>=2024.3.5",
]

[tool.uv]
package = true


[dependency-groups]
dev = [
    
    "linkml>=1.9.5",
    "mkdocs>=1.2.3",
    "mkdocs-material>=8.1.8",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "linkml-datalog>=0.2.0",
    "jupyter",
    "jupysql",
]

[tool.deptry]
known_first_party = ["chemrof"]
extend_exclude = ["docs"]

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/chemrof/datamodel/chemrof_pydantic.py",
  "src/chemrof/datamodel/chemrof.py",
]
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/chemrof/datamodel/chemrof_pydantic.py",
  "src/chemrof/datamodel/chemrof.py",
]
